--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -244,7 +244,7 @@ import DefaultLayout from "../layouts/default/default-layout.astro";
   </section>
 
   <!-- Wholesale Partnership Section -->
-  <section class="mt-12 bg-[#F0F1F0] h-[600px]">
+  <section class="mt-12 bg-[#F0F1F0] h-auto md:h-[600px]">
     <div class="h-full">
       <div class="flex flex-col md:flex-row h-full">
         <!-- Left image section -->
@@ -259,7 +259,7 @@ import DefaultLayout from "../layouts/default/default-layout.astro";
         </div>
 
         <!-- Right content section -->
-        <div class="w-full md:w-1/2 py-12 h-full">
+        <div class="w-full md:w-1/2 py-12 h-full px-8">
           <div class="max-w-xl mx-auto text-center md:text-left">
             <h2
               class="text-3xl md:text-4xl font-bold text-[#402818] mb-4 font-gochi-hand text-center"
