feat: latest changes

--- a/src/layouts/default/components/navbar.astro
+++ b/src/layouts/default/components/navbar.astro
@@ -9,8 +9,8 @@ const menuItems = [
     href: "/menu",
   },
   {
-    label: "Gallery",
-    href: "/gallery",
+    label: "Events",
+    href: "/events",
   },
   {
     label: "Contact Us",
