--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import DefaultLayout from "../layouts/default/default-layout.astro";
             <p
               class="text-2xl lg:text-3xl xl:text-4xl max-w-lg font-gochi-hand uppercase"
             >
-              Inspired by tradition, perfected for today.
+              Inspired by tradition, perfected for you.
             </p>
             <div
               class="pt-4 flex flex-wrap gap-4 justify-center md:justify-start"
