--- a/src/layouts/default/default-layout.astro
+++ b/src/layouts/default/default-layout.astro
@@ -5,7 +5,11 @@ import Footer from "./components/footer.astro";
 ---
 
 <RootLayout>
-  <Navbar />
-  <slot />
-  <Footer />
+  <div class="flex flex-col min-h-screen">
+    <Navbar />
+    <div class="flex-1 flex flex-col">
+      <slot />
+    </div>
+    <Footer />
+  </div>
 </RootLayout>
