--- a/src/layouts/default/components/navbar.astro
+++ b/src/layouts/default/components/navbar.astro
@@ -5,6 +5,10 @@ const menuItems = [
     href: "/",
   },
   {
+    label: "Shop",
+    href: "https://shop.kopikopikat.my",
+  },
+  {
     label: "Menu",
     href: "/menu",
   },
