--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import DefaultLayout from "../layouts/default/default-layout.astro";
               class="pt-4 flex flex-wrap gap-4 justify-center md:justify-start"
             >
               <a
-                href="/contact-us"
+                href="https://shop.kopikopikat.my"
                 class="bg-[#8b6747] border-2 text-white hover:bg-[#402818] px-8 py-3 rounded-full font-medium transition-colors uppercase"
               >
                 Order Now
