--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -57,7 +57,7 @@ const menuItems = [
           Ready to taste our Malaysian-inspired coffee?
         </h2>
         <a
-          href="/contact-us"
+          href="https://shop.kopikopikat.my"
           class="inline-block bg-[#8b6747] border-2 text-white hover:bg-[#402818] px-8 py-3 rounded-full font-medium transition-colors uppercase"
         >
           Order Now
